ARROW-10121: [C++] Fix emission of new dictionaries in IPC writer

When a dictionary changes from the previous batch, we should re-emit it.